fix: updated style for `text-secondary` when dark mode is enabled

--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -80,3 +80,9 @@
     transform: translate(3px, 3px);
   }
 }
+
+@media screen and (prefers-color-scheme: "dark") {
+  .cardFooter {
+    color: $text-secondary-dark;
+  }
+}
