--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -34,3 +34,4 @@ $secondary-light: #86efac;
 $hover: #eab308;
 $hover-light: #fde047;
 $text-secondary: #475569;
+$text-secondary-dark: #94a3b8;
